--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,6 +39,7 @@ a {
     padding-bottom: 10px;
     position: fixed;
     top: 0px;
+    left: 0px;
     background-color: #444457;
     /* box-shadow: 0 1px 3px hsl(0deg 0% 92% / 12%), 0 1px 1px hsl(0deg 0% 81% / 14%), 0 2px 1px hsl(0deg 0% 95% / 20%); */
     z-index: 1;
