--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,17 +18,6 @@ a {
 
 
 
-/* #search-box {
-  font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
-} */
-
-.is-hidden {
-  display: none;
-}
-
 .search-form__container {
   display: flex;
   flex-direction: row;
@@ -96,7 +85,7 @@ a {
   margin-left: 20px;
   min-width: 320px;
   flex-basis: calc(25% - 20px);
-  border: 2px solid rgb(7, 10, 43);
+  border: 2px solid #444457;
   border-radius: 10px;
   overflow: hidden;
   transition: all 0.3s;
@@ -138,5 +127,35 @@ a {
   flex-direction: column;
   align-items: center;
 
-  color: rgb(7, 10, 43);
+  color: #444457;
+}
+
+
+.page-load-status {
+  display: none; /* hidden by default */
+  padding-top: 20px;
+  border-top: 1px solid #DDD;
+  text-align: center;
+  color: #777;
+}
+
+.load-more {
+  display: block;
+  margin: 25px auto 0 auto;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #fbfbfb;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  font: inherit;
+  color: #444457;
+  cursor: pointer;
+}
+.end-of-search{
+  text-align: center;
+  font-size: 28px;
+  color: #444457;
+}
+.is-hidden {
+  display: none;
 }
