--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,7 +30,7 @@ a {
     top: 0px;
     left: 0px;
     background-color: #444457;
-    /* box-shadow: 0 1px 3px hsl(0deg 0% 92% / 12%), 0 1px 1px hsl(0deg 0% 81% / 14%), 0 2px 1px hsl(0deg 0% 95% / 20%); */
+    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
     z-index: 1;
 }
 .search-form {
@@ -85,14 +85,18 @@ a {
   margin-left: 20px;
   min-width: 320px;
   flex-basis: calc(25% - 20px);
-  border: 2px solid #444457;
+  border: 1px solid #444457;
+  /* border: none; */
   border-radius: 10px;
   overflow: hidden;
   transition: all 0.3s;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+
 }
 
 .gallery__link:hover {
-  cursor: zoom-in;
+  /* cursor: zoom-in; */
+  transform: scale(1.03);
 }
 
 .gallery__item {
@@ -109,10 +113,6 @@ a {
 
   object-fit: cover;
   transition: transform var(--animation-duration) var(--timing-function);
-}
-
-.gallery__image:hover {
-  transform: scale(1.03);
 }
 
 .gallery__info {
@@ -143,13 +143,19 @@ a {
   display: block;
   margin: 25px auto 0 auto;
   padding: 8px 20px;
-  border: none;
+  border: 1px solid #444457;
+  /* border: none; */
   border-radius: 5px;
   background-color: #fbfbfb;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
   font: inherit;
   color: #444457;
   cursor: pointer;
+}
+
+.load-more:hover {
+  /* cursor: zoom-in; */
+  transform: scale(1.03);
 }
 .end-of-search{
   text-align: center;
