--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,22 +16,20 @@ a {
   text-decoration: none;
 }
 
-
-
 .search-form__container {
   display: flex;
   flex-direction: row;
   justify-content: center;
 
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    background-color: #444457;
-    box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-    z-index: 1;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: #444457;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  z-index: 1;
 }
 .search-form {
   width: 100%;
@@ -86,29 +84,25 @@ a {
   min-width: 320px;
   flex-basis: calc(25% - 20px);
   border: 1px solid #444457;
-  /* border: none; */
   border-radius: 10px;
   overflow: hidden;
   transition: all 0.3s;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-
 }
 
 .gallery__link:hover {
-  /* cursor: zoom-in; */
   transform: scale(1.03);
 }
 
 .gallery__item {
   display: flex;
   flex-direction: column;
-  /* position: relative; */
+
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 .gallery__image {
   display: block;
-  /* width: 30vw; */
   height: 30vh;
 
   object-fit: cover;
@@ -130,11 +124,10 @@ a {
   color: #444457;
 }
 
-
 .page-load-status {
-  display: none; /* hidden by default */
+  display: none; 
   padding-top: 20px;
-  border-top: 1px solid #DDD;
+  border-top: 1px solid #ddd;
   text-align: center;
   color: #777;
 }
@@ -144,7 +137,6 @@ a {
   margin: 25px auto 0 auto;
   padding: 8px 20px;
   border: 1px solid #444457;
-  /* border: none; */
   border-radius: 5px;
   background-color: #fbfbfb;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
@@ -154,10 +146,9 @@ a {
 }
 
 .load-more:hover {
-  /* cursor: zoom-in; */
   transform: scale(1.03);
 }
-.end-of-search{
+.end-of-search {
   text-align: center;
   font-size: 28px;
   color: #444457;
