--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -136,10 +136,11 @@ a {
   display: block;
   margin: 25px auto 0 auto;
   padding: 8px 20px;
-  border: 1px solid #444457;
+  border: none;
+  /* border: 1px solid #444457; */
   border-radius: 5px;
   background-color: #fbfbfb;
-  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  /* box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%); */
   font: inherit;
   color: #444457;
   cursor: pointer;
